# vuln-forge

./: .gitignore  Dockerfile  README.md  database.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
notifier/: discord.py  telegram.py
pipeline/: endpoints.py  live_hosts.py  parameters.py  subdomains.py  vulnerabilities.py
tools/: amass.py  arjun.py  crtsh.py  dalfox.py  gau.py  httpx.py  katana.py  nikto.py  nuclei.py  sqlmap.py  subfinder.py
utils/: view_vulnerabilities.py
web/: Dockerfile  app.py  pyproject.toml  requirements.txt
web/static/css/: style.css
web/static/js/: script.js
web/templates/: index.html
